--- a/index.html
+++ b/index.html
@@ -207,12 +207,7 @@
               ></textarea>
             </div>
             <div style="text-align: center">
-              <button
-                class="btn btn-primary me-2"
-                type="submit"
-                tabindex="14"
-                onclick="showLoader()"
-              >
+              <button class="btn btn-primary me-2" type="submit" tabindex="14">
                 Submit
               </button>
               <button class="btn btn-danger" tabindex="15" type="reset">
@@ -225,7 +220,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
   </body>
