--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
         <div
           class="col-lg-12 col-md-12 mx-auto shadow border bg-white p-4 rounded"
         >
-          <h2 class="text-center fw-bold mb-3">Daily Visit Report</h2>
+          <div class="row">
+            <!-- <div class="col-md-3"> -->
+            <img src="Logo.JPG" style="width: 132px" />
+            <h2 class="text-center fw-bold mb-3">Daily Visit Report</h2>
+            <!-- </div>
+            <div class="col">
+             
+            </div> -->
+          </div>
+
           <div style="text-align: end">
             <label
               >Date:
