--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div id="form_alerts"></div>
             <div class="row">
               <div class="col-md-6">
-                <label for="executiveName" class="form-label"
+                <label for="executiveName" class="form-label required"
                   >Name Of Executive</label
                 >
                 <input
@@ -62,7 +62,9 @@
                 />
               </div>
               <div class="col-md-6">
-                <label for="shopName" class="form-label">Shop Name</label>
+                <label for="shopName" class="form-label required"
+                  >Shop Name</label
+                >
                 <input
                   type="text"
                   id="shopName"
@@ -76,7 +78,7 @@
 
             <div class="row">
               <div class="col-md-6">
-                <label for="address" class="form-label">Address</label>
+                <label for="address" class="form-label required">Address</label>
                 <input
                   type="text"
                   id="address"
@@ -87,7 +89,7 @@
                 />
               </div>
               <div class="col-md-6">
-                <label for="area" class="form-label">Area</label>
+                <label for="area" class="form-label required">Area</label>
                 <input
                   type="text"
                   id="area"
@@ -101,7 +103,9 @@
 
             <div class="row">
               <div class="col-md-6">
-                <label for="landmark" class="form-label">Landmark</label>
+                <label for="landmark" class="form-label required"
+                  >Landmark</label
+                >
                 <input
                   type="text"
                   id="landmark"
@@ -112,7 +116,7 @@
                 />
               </div>
               <div class="col-md-6">
-                <label for="region" class="form-label">Region</label>
+                <label for="region" class="form-label required">Region</label>
                 <input
                   type="text"
                   id="region"
@@ -126,20 +130,22 @@
 
             <div class="row">
               <div class="col-md-6">
-                <label for="contactPerson" class="form-label"
+                <label for="contactPerson" class="form-label required"
                   >Contact Person ( In charge/ Manager)
                 </label>
                 <input
                   type="text"
                   id="contactPerson"
                   name="Contact Person ( In charge/ Manager)"
-                  class="form-control"
+                  class="form-control required"
                   tabindex="7"
                   required
                 />
               </div>
               <div class="col-md-6">
-                <label for="phoneNumber" class="form-label">Phone Number</label>
+                <label for="phoneNumber" class="form-label required"
+                  >Phone Number</label
+                >
                 <input
                   type="text"
                   id="phoneNumber"
@@ -153,7 +159,7 @@
 
             <div class="row">
               <div class="col-md-6">
-                <label for="contactPerson" class="form-label"
+                <label for="contactPerson" class="form-label required"
                   >Required Product(s)
                 </label>
                 <input
@@ -166,7 +172,9 @@
                 />
               </div>
               <div class="col-md-6">
-                <label for="rate" class="form-label">Rate (in AED)</label>
+                <label for="rate" class="form-label required"
+                  >Rate (in AED)</label
+                >
                 <input
                   type="text"
                   id="rate"
@@ -180,7 +188,7 @@
 
             <div class="row">
               <div class="col-md-6">
-                <label for="soldProducts" class="form-label"
+                <label for="soldProducts" class="form-label required"
                   >Sold Product(s)
                 </label>
                 <input
@@ -193,7 +201,9 @@
                 />
               </div>
               <div class="col-md-6">
-                <label for="value" class="form-label">Value (in AED)</label>
+                <label for="value" class="form-label required"
+                  >Value (in AED)</label
+                >
                 <input
                   type="text"
                   id="value"
