--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                   name="Executive Name"
                   class="form-control"
                   tabindex="1"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -59,6 +60,7 @@
                   name="Shop name"
                   class="form-control"
                   tabindex="2"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -73,6 +75,7 @@
                   name="Address"
                   class="form-control"
                   tabindex="3"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -83,6 +86,7 @@
                   id="area"
                   name="Area"
                   class="form-control"
+                  onkeydown="return event.key != 'Enter';"
                   tabindex="4"
                   required
                 />
@@ -100,6 +104,7 @@
                   name="Landmark"
                   class="form-control"
                   tabindex="5"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -111,6 +116,7 @@
                   name="Region"
                   class="form-control"
                   tabindex="6"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -127,6 +133,7 @@
                   name="Contact Person ( In charge/ Manager)"
                   class="form-control required"
                   tabindex="7"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -140,6 +147,7 @@
                   name="Phone number"
                   class="form-control"
                   tabindex="8"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -156,6 +164,7 @@
                   name="Required Product(s)"
                   class="form-control"
                   tabindex="9"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -169,6 +178,7 @@
                   name="Rate (in AED)"
                   class="form-control"
                   tabindex="10"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -185,6 +195,7 @@
                   name="Sold Product(s)"
                   class="form-control"
                   tabindex="11"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
@@ -198,6 +209,7 @@
                   name="Value (in AED)"
                   class="form-control"
                   tabindex="12"
+                  onkeydown="return event.key != 'Enter';"
                   required
                 />
               </div>
